--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
  	<script type="text/javascript" src='js/main.js'></script>
-	<link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32"/>
-	<link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16"/>
-	<!-- MDB icon -->
-  	<link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
   	<!-- Font Awesome -->
   	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   	<!-- Bootstrap core CSS -->
@@ -227,11 +227,20 @@
 					            		</div>
 
 					            		<div class="col-sm-6 col-md-4">
+					              			<a href="#" target="_blank">
+					                		<img src="images/marketecture.png" alt="Marketecture" class="img-fluid">
+												<h4>Market &amp Product Research</h4>
+												</a>
+												<p>There are many ways to perform market and product research, and, after many mistakes, I have crystallized a fool-proof process.</p>
+					              			</a>
+					            		</div>
+
+					            		<div class="col-sm-6 col-md-4">
 					              			<a href="https://pages.awscloud.com/Leverage-Compute-Pricing-Models-and-Rightsizing-to-Maximize-Savings-on-AWS_2019_1018-ENT_OD.html" target="_blank" target="_blank">
 					                		<img src="images/online-tech-talk.png" alt="Portfolio Item" class="img-fluid">
 												<h4>Webinars & Tech Talks</h4>
 												</a>
-												<p>Webinars are the perfect opportunity to shine a light on a specific topic.</p>
+												<p>Webinars are the perfect opportunity to shine a light on a specific topic and make it actionable and understandable for just about any audience.</p>
 					              			</a>
 					            		</div>
 					            		<div class="col-sm-6 col-md-4">
@@ -248,14 +257,6 @@
 					                		<h4>Creative Storytelling</h4>
 					              			</a>
 					              			<p>Years ago I worked with this uber-talented guy named <a href="http://www.whitemanemedia.com/">Jorge</a>. He took some sketches of mine and turned them into the supporting characters in this amazing video. So cool!</p>	
-					            		</div>
-					            		<div class="col-sm-6 col-md-4">
-					              			<a href="#" target="_blank">
-					                		<img src="images/marketecture.png" alt="Marketecture" class="img-fluid">
-												<h4>Branding &amp Marketecture</h4>
-												</a>
-												<p>Branding systems are sugar and spice and everything nice. So are marketectures and diagrams of all kinds.</p>
-					              			</a>
 					            		</div>
 					            		
 					            		<div class="col-sm-6 col-md-4">
