Changed subtitle text to H3

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			<div class="col-md-12">
 				<div class="col-md-8">
 					<h2>PRODUCT LEADER WITH A PASSION FOR UX</h2>
-					<p>10 years of experience building bridges across Product, Marketing, UX, and Engineering. These days, you can find me over on UX side of the house (and I'm loving every minute of it)!</p>
+					<h3>10 years of experience building bridges across Product, Marketing, UX, and Engineering. These days, you can find me over on UX side of the house (and I'm loving every minute of it)!</h3>
 					<p>Please forgive any bugs! I'm still learning the ins and outs of Bootstrap 4 after a recent migration.</p>
 				</div>
 
