Fixed broken link and added MR picture

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
 					            		</div>
 
 					            		<div class="col-sm-6 col-md-4">
-					              			<a href="#" target="_blank">
-					                		<img src="images/marketecture.png" alt="Marketecture" class="img-fluid">
+					              			<a href="../pages/market-product-research.html" target="_blank">
+					                		<img src="images/market-research.png" alt="Market Research" class="img-fluid">
 												<h4>Market &amp Product Research</h4>
 												</a>
 												<p>There are many ways to perform market and product research, and, after many mistakes, I have crystallized a fool-proof process.</p>
